wip on sorting out live deps for trains